--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -37,3 +37,7 @@
   margin:1em 1em 0em 0em;
   display: inline-flex;
 }
+.homeSlide .ui.segment{
+  border-radius: 0rem !important;
+  border:0 !important; 
+}
