added google places

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,6 +46,6 @@
     background : #254b6e !important;
 }
 
-.ui.secondary.button, .ui.secondary.buttons .button{
-    background-color: #2185d0 !important;
-}
+/*.ui.secondary.button, .ui.secondary.buttons .button{*/
+    /*background-color: #2185d0 !important;*/
+/*}*/
