fixed gmaps url

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,5 +2,5 @@ extends layout
 
 block content
   div(id='entry-point')
-  script(type="text/javascript" src='http://maps.googleapis.com/maps/api/js?key=AIzaSyDPf78BuaLgwKC21Egi3L_2C071UiRHwJk&sensor=false&libraries=places')
+  script(type="text/javascript" src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDPf78BuaLgwKC21Egi3L_2C071UiRHwJk&sensor=false&libraries=places')
   script(type="text/javascript" src='/build/bundle.js')
